--- a/packages/mdxjs-code-plugin/package.json
+++ b/packages/mdxjs-code-plugin/package.json
@@ -1,22 +1,28 @@
 {
   "name": "@mintsourcejs/mdxjs-code-plugin",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./dist/index.js",
   "type": "module",
   "description": "A plugin for @mdx-js/mdx@2.x to add underlying data/functionality to MDX documents required to support a live code editing implementation.",
   "license": "MIT",
   "author": "Ian Henshaw",
-  "keywords": ["mdx", "mdxjs", "plugin", "live", "rehype"],
+  "keywords": [
+    "mdx",
+    "mdxjs",
+    "plugin",
+    "live",
+    "rehype"
+  ],
   "publishConfig": {
     "access": "public"
-  },  
+  },
   "scripts": {
     "build": "babel src --out-dir dist --source-maps --copy-files",
     "dev": "babel src --watch --out-dir dist --source-maps --copy-files",
     "lint": "eslint src"
   },
   "dependencies": {
-    "@mintsourcejs/mdxjs-common": "^0.1.0",
+    "@mintsourcejs/mdxjs-common": "^0.1.1",
     "acorn": "^8.11.2",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-mdx-jsx": "^3.0.0",
