--- a/packages/mdxjs-react/package.json
+++ b/packages/mdxjs-react/package.json
@@ -1,12 +1,17 @@
 {
   "name": "@mintsourcejs/mdxjs-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "./dist/index.js",
   "type": "module",
   "description": "Components for use with @mdx-js/react to provide react-live based code block support",
   "license": "MIT",
   "author": "Ian Henshaw",
-  "keywords": ["mdx", "mdxjs", "live", "react"],
+  "keywords": [
+    "mdx",
+    "mdxjs",
+    "live",
+    "react"
+  ],
   "publishConfig": {
     "access": "public"
   },
