--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -13,7 +13,8 @@
     "@mdx-js/react": "^3.0.0",
     "@mintsourcejs/mdxjs-react": "^0.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-live": "^4.1.5"
   },
   "devDependencies": {
     "@mdx-js/rollup": "^3.0.0",
