--- a/packages/mdxjs-react/package.json
+++ b/packages/mdxjs-react/package.json
@@ -21,7 +21,7 @@
   },
   "bugs": {
     "url": "https://github.com/mintsourcejs/mdsjx/issues"
-  },  
+  },
   "scripts": {
     "build": "babel src --out-dir dist --source-maps --copy-files",
     "dev": "babel src --watch --out-dir dist --source-maps --copy-files",
@@ -29,8 +29,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "prop-types": "^15.6.0",
-    "react-live": "^2.4.1"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -40,10 +39,10 @@
     "eslint": "^8.52.0",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "react": "^16.8.0||^17.0.0||^18.0.0",
-    "sass": "^1.69.5"
+    "react": "^16.8.0||^17.0.0||^18.0.0"
   },
   "peerDependencies": {
-    "react": "^16.8.0||^17.0.0||^18.0.0"
+    "react": "^16.8.0||^17.0.0||^18.0.0",
+    "react-live": "^4.1.5"
   }
 }
