--- a/packages/mdxjs-common/package.json
+++ b/packages/mdxjs-common/package.json
@@ -2,6 +2,7 @@
   "name": "@mintsourcejs/mdxjs-common",
   "version": "0.1.2",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "license": "MIT",
   "author": "Ian Henshaw",
