--- a/packages/mdxjs-code-plugin/package.json
+++ b/packages/mdxjs-code-plugin/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "babel src --out-dir dist --source-maps --copy-files",
     "dev": "babel src --watch --out-dir dist --source-maps --copy-files",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest src"
   },
   "dependencies": {
     "@mintsourcejs/mdxjs-common": "^0.1.2",
@@ -41,6 +42,8 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "eslint": "^8.52.0"
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0"
   }
 }
