--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdx-js/react": "^3.0.0",
     "@mintsourcejs/mdxjs-react": "^0.2.0",
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-live": "^4.1.5"
